--- a/src/styles/room.module.scss
+++ b/src/styles/room.module.scss
@@ -111,3 +111,71 @@
     }
   }
 }
+.excludeModal {
+  height: 100%;
+  width: 100%;
+  background: #fefefe;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  svg {
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-bottom: 1.5rem;
+
+    path {
+      stroke: #d73754;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  b {
+    font: 700 1.5rem "Poppins", sans-serif;
+    color: #29292e;
+    margin-bottom: 0.75rem;
+    text-align: center;
+  }
+
+  p {
+    font: 400 1rem "Roboto", sans-serif;
+    color: #737380;
+    margin-bottom: 2.5rem;
+    text-align: center;
+  }
+
+  div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+
+    @media(max-width: 400px) {
+      flex-direction: column;
+    }
+
+    button {
+      padding: 0.875rem 2rem;
+      cursor: pointer;
+      border: 1px solid transparent;
+      border-radius: 0.5rem;
+      transition: filter .2s;
+
+      @media(max-width: 400px) {
+        width: 100%;
+      }
+
+      &:hover {
+        filter: brightness(0.9);
+      }
+
+      &:last-child {
+        background: #d73754;
+        color: #fefefe;
+      }
+    }
+  }
+}
