--- a/src/styles/auth.module.scss
+++ b/src/styles/auth.module.scss
@@ -13,6 +13,10 @@
     flex-direction: column;
     justify-content: center;
     padding: 120px 80px;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
   }
 
   img {
